2009-07-07  Per Bothner  <per@bothner.com>
	    Helmut Eller  <eller.helmut@gmail.com>

	* misc-test.scm: New test based on Savannah bug #24249
	"Local define miscompiled".

2009-07-05  Per Bothner  <per@bothner.com>
	    Helmut Eller  <eller.helmut@gmail.com>

	* misc-test.scm: New test based on Savannah bug #26940
	"Compiler stuck in endless loop".

	* inlining-test.scm (inline-two-functions): New test for inlining
	submitted by Helmut to Kawa mailing list.
	* inlining.expected, makefile.am: Update accordingly.

2009-06-28  Per Bothner  <per@bothner.com>

	* inlining-test.scm (inline-two-calls, check-even):
	Two new functions to measure.
	* inlining.expected: Add more expected code lengths.
	* misc-test.scm: Actually call inline-two-calls and check-even.
	* Makefile.am: Update accordingly.

2009-06-02  Per Bothner  <per@bothner.com>

	* text-test.scm: New test.  Initially mostly tests R6RS examples.
	* Makefile.ma: Update accordingly.
	* regex-test.scm: Add one test.

2009-05-31  Per Bothner  <per@bothner.com>
	    Dorai Sitaram

	* regex-test.scm: New test-suite, based on the one package with
	pregexp.  Test both pregexp and regex APIs.

2009-05-22  Felix Klock <felix_klock_ii@mac.com>

	* mac-test.scm: Test literals in syntax-rules and syntaxtic hygiene.

2009-05-22  Per Bothner  <per@bothner.com>

	* mac-test.scm: One R5RS syntactic hygiene testcase now works.
	New test based on bug report from Dan Stanger <DStanger@EatonVance.Com>.

2009-05-16  Alex Mitchell <alexm@nus.edu.sg>
	    Per Bothner  <per@bothner.com>

	* test-load-require.scm, test-load-require-1.scm,
	test-load-require-2.scm, test-load-require-3.scm,
	test-load-require.expected:  New testcase from bug report.

2009-04-18  Per Bothner  <per@bothner.com>

	* cycle1.scm: New definitions to test module-name and aliases.
	* obj-test.scm: New test that it works.

2009-03-13  Per Bothner  <per@bothner.com>

	* srfi-69-test.scm: Test of SRFI-69 (hashtables), from Larceny.