@@ -1,3 +1,7 @@
+2009-07-08  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (EXTRA_DIST): Add some missing files.
+
 2009-07-07  Per Bothner  <per@bothner.com>
 	    Helmut Eller  <eller.helmut@gmail.com>
 
